# ipywidgets-jsonschema

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.md  Pydantic2JsonSchemaLimitations (1).ipynb  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: ci.yml  pypi.yml
demo/: demo.ipynb
doc/: conf.py
doc/_build/: .buildinfo  genindex.html
docs/: .gitignore  requirements.txt
docs/source/: about.rst  api.rst  architecture.rst  code-quality.rst  conf.py  contributing.rst  data-types.ipynb  detailed.ipynb  developing.rst  guide.ipynb  index.rst  installation.rst  issues.rst  modules.rst  notebooks.rst  testing.rst  usage-guide.rst  usage.ipynb
ipywidgets_jsonschema/: __init__.py  form.py  pydantic_editor_mixin.py
schemas/: basictypes.json  category.json  customvalidationfloat.json  customvalidationmodel.json  dictminproperties.json  dictunion.json  dog.json  dynamicconfig.json  dynamicfields.json  enummodel.json  fixedarraysize.json  floatmultipleofminumumcontraint.json  generics.json  group.json  intalias.json  intfield.json  ipmodel.json  item.json  listenum.json  literalmodel.json  modelannotated.json  nestedmodel.json  numericvalidations.json  optionalmodel.json  recursivemodel.json  stringandint.json  stringminlengthmaxlengthcontraint.json  stringnested.json  stringprivatefield.json  stringregex.json  stringsimple.json  stringvalidations.json  stringwithannotations.json  unionintfloat.json  uuidmodel.json
tests/: conftest.py  test_form.py  test_update_missing.py
tests/models/: ArrayFixedSize.py  Dictionary.py  DictionaryMinProperties.py  DictionaryUnion.py  FloatMultipleOf.py  Generics.py  InheritanceModel.py  IntAlias.py  JsonModel.py  ListEnum.py  ListUnique.py  Literals.py  ModelAnnotated.py  NestedModel.py  SimpleModel.py  (+10 more)
(+80 files in other folders)
