[metadata]
name = ipywidgets_jsonschema
version = attr: ipywidgets_jsonschema.__version__
description = Widget Generator for JSON schema
long_description = file: README.md
long_description_content_type = text/markdown
author = Dominic Kempf
author_email = ssc@iwr.uni-heidelberg.de
license = MIT
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    IPython
    ipywidgets>=8.0.0b1
    jsonschema==3.2.0
    pyrsistent
    traitlets
